--- a/src/scenes/Main_Scene.fxml
+++ b/src/scenes/Main_Scene.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="1068.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="scenes.Main_SceneController">
   <children>
-    <Label layoutX="20.0" layoutY="14.0" prefHeight="29.0" prefWidth="258.0" text="Inventory Managment System" textFill="#4333ff">
+    <Label layoutX="20.0" layoutY="14.0" prefHeight="29.0" prefWidth="258.0" text="Inventory Management System" textFill="#4333ff">
       <font>
         <Font name="System Bold Italic" size="15.0" />
       </font>
